[project]
name = "oura"
version = "0.1.0"
description = "CLI for the Oura Ring API"
readme = "README.md"
authors = [
    { name = "Marko Elez", email = "markoelez7@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
]

[project.scripts]
oura = "oura:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
